# Doppelvoice

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  check.bat  doppelvoice.spec  gui.bat  pyproject.toml  requirements.txt  run.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/en/: ARCHITECTURE.md  PRD.md  SETUP.md  TROUBLESHOOTING.md
docs/zh/: ARCHITECTURE.md  PRD.md  SETUP.md  TROUBLESHOOTING.md
examples/: capture_screenshot.py  probe_api.py  probe_e2e.py  probe_mic.py
src/doppelvoice/: __init__.py  __main__.py  cli.py  config.py
src/doppelvoice/audio/: capture.py  devices.py  opus_decoder.py  playback.py  resample.py
src/doppelvoice/engine/: doubao.py  protocol.py
src/doppelvoice/engine/_pb/products/understanding/ast/: ast_service_pb2.py
src/doppelvoice/gui/: app.py  bus.py  env_io.py  i18n.py  main_window.py  settings_dialog.py  subtitle_view.py  theme.py
src/doppelvoice/gui/widgets/: audio_meter.py  status_badge.py
src/doppelvoice/pipeline/: orchestrator.py
src/doppelvoice/utils/: log.py
tests/: test_config.py  test_devices.py  test_doubao_classify.py  test_log_redact.py  test_protocol.py  test_resample.py
