[project]
name = "doppelvoice"
version = "0.1.0"
description = "中→英实时同传（豆包 Seed LiveInterpret 2.0 + 虚拟麦克风）"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "soxr>=0.3",
]

[project.scripts]
doppelvoice = "doppelvoice.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
