[project]
name = "doppelvoice"
version = "0.3.2"
description = "Real-time speech-to-speech translation with zero-shot voice cloning, powered by ByteDance Doubao Seed LiveInterpret 2.0. Supports 9 languages (zh/en/ja/id/es/pt/de/fr + bilingual ZH⇄EN auto)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["speech-translation", "voice-cloning", "doubao", "seed-liveinterpret", "real-time", "speech-to-speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "soxr>=0.3 ; platform_system != 'Emscripten'",
    "protobuf>=5.0",
    "PySide6>=6.6",
    "qasync>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "grpcio-tools>=1.60",  # 重新生成 *_pb2.py 才需要
    "pyinstaller>=6.0",    # 打 Windows .exe 才需要
]

[project.urls]
Homepage = "https://github.com/TianqBu/Doppelvoice"
Repository = "https://github.com/TianqBu/Doppelvoice"
Issues = "https://github.com/TianqBu/Doppelvoice/issues"
Changelog = "https://github.com/TianqBu/Doppelvoice/blob/main/CHANGELOG.md"

[project.scripts]
doppelvoice = "doppelvoice.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
